added saving-plan section

--- a/assets/scss/abstracts/_variable.scss
+++ b/assets/scss/abstracts/_variable.scss
@@ -19,8 +19,10 @@ $font-size-xxl:28px;
 $border-radius-sm:14px;
 $border-radius-lg:100px;
 
-$font-weight-normal: 400;  
-$font-weight-bold: 600; 
+$font-weight-normal: 400; 
+$font-weight-large:500; 
+$font-weight-bold: 600;
+$font-weight-extrabold:700; 
 
 $breakpoint-xs: 320px;    /*mobile */
 $breakpoint-sm: 576px;    /* tablets*/
