--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,7 +129,7 @@ ul {
   grid-template-columns: 781px auto;
   grid-template-rows: 64px auto auto;
   gap: 32px 32px;
-  padding: 32px 0 0 32px;
+  padding: 32px 32px 0 32px;
 }
 
 .dashboard__searchbar {
@@ -191,10 +191,16 @@ ul {
   padding: 16px;
   border-radius: 14px;
 }
+.finance h3 {
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: -1px;
+}
 .finance__report-wrapper {
   display: grid;
   grid-template-columns: auto auto;
   gap: 18px;
+  margin-top: 24px;
 }
 .finance__report {
   padding: 20px;
@@ -257,6 +263,109 @@ ul {
 .finance__report-balance .finance__report-percentage span {
   letter-spacing: 0px;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.saving {
+  padding: 16px;
+  border-radius: 14px;
+  background-color: #FFFFFF;
+}
+.saving__header {
+  display: flex;
+  justify-content: space-between;
+}
+.saving__header h3 {
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: -1px;
+  color: #0D163A;
+}
+.saving__header a {
+  font-weight: 500;
+  font-size: 16px;
+  color: #4745A4;
+}
+.saving__divider {
+  width: 100%;
+  border-bottom: 1px solid rgba(71, 69, 164, 0.1);
+  margin: 24px 0;
+}
+.saving__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+.saving__item {
+  padding: 8px;
+}
+.saving__goal {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 14px;
+}
+.saving__goal-title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #4745A4;
+  line-height: 24px;
+}
+.saving__goal-target {
+  font-size: 12px;
+  font-weight: 400;
+  color: rgba(71, 69, 164, 0.6);
+}
+.saving__data {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+.saving__data-amount {
+  font-weight: 600;
+  font-size: 20px;
+  letter-spacing: -1px;
+}
+.saving__data-amount sub {
+  font-size: 12px;
+  color: rgba(71, 69, 164, 0.5);
+}
+.saving__data-percentage {
+  font-weight: 600;
+  font-size: 18px;
+  letter-spacing: -1px;
+}
+.saving__data-percentage--bali {
+  color: #4745A4;
+}
+.saving__data-percentage--gadget {
+  color: #F9BA33;
+}
+.saving__data-percentage--charity {
+  color: #3BBB6E;
+}
+.saving__progressbar {
+  width: 100%;
+  height: 8px;
+  appearance: none;
+}
+.saving__progressbar::-webkit-progress-bar {
+  background-color: #DEDEDE;
+  height: 100%;
+  border-radius: 100px;
+}
+.saving__progressbar--bali::-webkit-progress-value {
+  background-color: #4745A4;
+  height: 100%;
+  border-radius: 100px;
+}
+.saving__progressbar--gadget::-webkit-progress-value {
+  background-color: #3BBB6E;
+  height: 100%;
+  border-radius: 100px;
+}
+.saving__progressbar--charity::-webkit-progress-value {
+  background-color: #F9BA33;
+  height: 100%;
+  border-radius: 100px;
 }
 
 .dashboard {
