--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,10 @@ ul {
   list-style: none;
 }
 
+h1, h2, h3 {
+  font-weight: normal;
+}
+
 .sidebar__icon {
   width: 24px;
   height: 24px;
@@ -73,16 +77,62 @@ ul {
 .dashboard__sidebar {
   width: 280px;
   background-color: #FFFFFF;
+  transition: width 0.3s ease;
+}
+@media (max-width: 1200px) {
+  .dashboard__sidebar {
+    width: 230px;
+  }
+}
+@media (max-width: 996px) {
+  .dashboard__sidebar {
+    width: auto;
+  }
+}
+@media (max-width: 500px) {
+  .dashboard__sidebar {
+    position: fixed;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    z-index: 200;
+    transition: left 0.3s ease;
+  }
+  .dashboard__sidebar.open {
+    left: 0px;
+  }
 }
 
 .sidebar__logo-container {
+  position: relative;
   padding: 35px 66px 16px 36px;
+}
+@media (max-width: 1150px) {
+  .sidebar__logo-container {
+    padding: 25px 40px 10px 26px;
+  }
+}
+@media (max-width: 1080px) {
+  .sidebar__logo-container {
+    padding: 25px 20px 10px 16px;
+  }
 }
 
 .sidebar__logo {
   width: 100%;
   padding: 14px 77px;
+  transition: padding 1s ease, background-color 1s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
   background-color: #D9D9D9;
+}
+@media (max-width: 1150px) {
+  .sidebar__logo {
+    padding: 10px 17px;
+  }
 }
 .sidebar__logo img {
   width: 24px;
@@ -93,8 +143,8 @@ ul {
   width: 100%;
   display: flex;
   flex-direction: column;
-  height: 872px;
   justify-content: space-between; /* Push bottom items to bottom */
+  height: 872px;
 }
 
 .sidebar__item a {
@@ -104,7 +154,59 @@ ul {
   color: #0D163A;
   font-size: 16px;
 }
+@media (max-width: 1080px) {
+  .sidebar__item a {
+    padding: 15px 20px 10px 25px;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .sidebar__item a span {
+    display: flex;
+  }
+}
 
+.sidebar__toggle {
+  display: none;
+  position: absolute;
+  top: 50%;
+  right: -14px;
+  transform: translateY(-30%);
+  background: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  color: rgba(13, 22, 58, 0.7);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar__item a span {
+  display: inline-block;
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+@media (max-width: 1150px) {
+  .sidebar__toggle {
+    display: block;
+  }
+  .sidebar__item a span {
+    opacity: 0;
+    transform: translateX(-10px); /* Move text slightly left */
+    display: none; /* Initially hidden */
+  }
+  .sidebar__item a span.show-span {
+    display: inline-block;
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 .sidebar__navlink--active {
   border-left: 4px solid #4745A4;
   font-weight: 600;
@@ -119,17 +221,53 @@ ul {
 
 .sidebar__divider {
   border-bottom: 1px solid rgba(13, 22, 58, 0.3);
-  width: 219px;
-  height: 1px;
   margin: 32px 30px;
+}
+
+.hamburger {
+  font-size: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  z-index: 100;
+}
+@media (max-width: 500px) {
+  .hamburger {
+    display: block;
+  }
 }
 
 .dashboard__main {
   display: grid;
-  grid-template-columns: 781px auto;
-  grid-template-rows: 64px auto auto;
+  grid-template-columns: minmax(500px, auto) minmax(350px, auto);
   gap: 32px 32px;
   padding: 32px 32px 0 32px;
+}
+@media (max-width: 1235px) {
+  .dashboard__main {
+    padding: 21px 21px 0 21px;
+    gap: 20px 20px;
+  }
+}
+@media (max-width: 996px) {
+  .dashboard__main {
+    grid-template-columns: 380px 380px;
+  }
+}
+@media (max-width: 900px) {
+  .dashboard__main {
+    grid-template-columns: minmax(290px, auto) minmax(340px, auto);
+  }
+}
+@media (max-width: 760px) {
+  .dashboard__main {
+    grid-template-columns: 100%;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .dashboard__searchbar {
@@ -140,14 +278,25 @@ ul {
 
 .dashboard__searchbar-input {
   width: 100%;
+  height: 100%;
   padding: 20px 0 20px 46px;
   outline: none;
   font-size: 16px;
   border: none;
   border-radius: 100px;
 }
+@media (max-width: 800px) {
+  .dashboard__searchbar-input {
+    padding: 15px 0 15px 38px;
+  }
+}
 .dashboard__searchbar-input::placeholder {
   font-size: 14px;
+}
+@media (max-width: 800px) {
+  .dashboard__searchbar-input::placeholder {
+    font-size: 12px;
+  }
 }
 
 .searchbar__icon {
@@ -156,34 +305,139 @@ ul {
   height: 16px;
   left: 20px;
   top: 50%;
-  transform: translateY(-70%);
+  transform: translateY(-50%);
+}
+@media (max-width: 800px) {
+  .searchbar__icon {
+    width: 10px;
+    height: 10px;
+  }
 }
 
 .actions {
   display: flex;
-  column-gap: 10px;
-  background-color: #FFFFFF;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 10px;
   padding: 8px;
   border-radius: 100px;
+  background-color: #FFFFFF;
 }
-.actions__icon {
+@media (max-width: 1120px) {
+  .actions {
+    padding: 3px;
+    border-radius: 100px;
+    background-color: #FFFFFF;
+  }
+}
+@media (max-width: 780px) {
+  .actions {
+    column-gap: 5px;
+  }
+}
+@media (max-width: 760px) {
+  .actions {
+    padding: 10px 0;
+    order: -1;
+    background-color: transparent;
+    justify-content: end;
+    column-gap: 10px;
+  }
+}
+.actions__icon img {
+  height: 24px;
+  width: 24px;
+}
+@media (max-width: 996px) {
+  .actions__icon img {
+    height: 20px;
+    width: 20px;
+  }
+}
+@media (max-width: 780px) {
+  .actions__icon img {
+    height: 16px;
+    width: 16px;
+  }
+}
+.actions__icon--alerts {
+  padding: 12px 21px;
+  border-radius: 100px;
+  border: 1px solid #DEDEDE;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+@media (max-width: 996px) {
+  .actions__icon--alerts {
+    padding: 8px 15px;
+    border-radius: 100px;
+  }
+}
+@media (max-width: 780px) {
+  .actions__icon--alerts {
+    padding: 6px 12px;
+    border-radius: 100px;
+  }
+}
+.actions__icon--active {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  height: 48px;
+  width: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+  outline: 1px solid #DEDEDE;
+  outline-offset: 1px;
+}
+@media (max-width: 996px) {
+  .actions__icon--active {
+    height: 34px;
+    width: 34px;
+  }
+}
+@media (max-width: 780px) {
+  .actions__icon--active {
+    height: 28px;
+    width: 28px;
+  }
+}
+.actions__icon-toggle {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+.actions__icon-toggle img {
   width: 24px;
   height: 24px;
 }
-.actions__icon-wrapper {
-  padding: 12px 21px;
-  border-radius: 100px;
-  border: 1px solid #F7F7FB;
+@media (max-width: 996px) {
+  .actions__icon-toggle img {
+    height: 20px;
+    width: 20px;
+  }
 }
-.actions__icon-active {
-  background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
+@media (max-width: 780px) {
+  .actions__icon-toggle img {
+    height: 16px;
+    width: 16px;
+  }
 }
 .actions__user {
   font-size: 16px;
-  width: 90px;
+}
+@media (max-width: 780px) {
+  .actions__user {
+    font-size: 14px;
+  }
 }
 
 .finance {
@@ -191,10 +445,21 @@ ul {
   padding: 16px;
   border-radius: 14px;
 }
+@media (max-width: 780px) {
+  .finance {
+    padding: 11px;
+  }
+}
 .finance h3 {
   font-size: 20px;
   font-weight: 700;
+  color: #0D163A;
   letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .finance h3 {
+    font-size: 18px;
+  }
 }
 .finance__report-wrapper {
   display: grid;
@@ -202,15 +467,39 @@ ul {
   gap: 18px;
   margin-top: 24px;
 }
+@media (max-width: 780px) {
+  .finance__report-wrapper {
+    margin-top: 16px;
+    gap: 12px;
+  }
+}
+@media (max-width: 996px) {
+  .finance__report-wrapper {
+    grid-template-columns: auto;
+  }
+}
 .finance__report {
   padding: 20px;
   border-radius: 14px;
   border: 1px solid rgba(222, 222, 222, 0.7);
 }
+@media (max-width: 1280px) {
+  .finance__report {
+    padding: 14px;
+    border-radius: 14px;
+  }
+}
+@media (max-width: 780px) {
+  .finance__report {
+    padding: 8px 8px;
+  }
+}
 .finance__report-row {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
-  column-gap: 9px;
+  flex-direction: row;
+  gap: 0 9px;
 }
 .finance__report-title {
   font-size: 18px;
@@ -218,49 +507,101 @@ ul {
   color: #0D163A;
   margin-bottom: 9px;
 }
+@media (max-width: 780px) {
+  .finance__report-title {
+    margin-bottom: 4px;
+  }
+}
+@media (max-width: 1280px) {
+  .finance__report-title {
+    font-size: 16px;
+    font-weight: 600;
+    color: #0D163A;
+  }
+}
 .finance__report-icon {
-  border-radius: 100px;
   border: 1px solid rgba(222, 222, 222, 0.2);
   padding: 8px 10px;
+  border-radius: 100px;
 }
 .finance__report-icon img {
   width: 32px;
   height: 32px;
 }
+@media (max-width: 1260px) {
+  .finance__report-icon img {
+    width: 24px;
+    height: 24px;
+  }
+}
+@media (max-width: 780px) {
+  .finance__report-icon img {
+    width: 18px;
+    height: 18px;
+  }
+}
 .finance__report-percentage {
   display: flex;
+  justify-content: center;
   align-items: center;
-  column-gap: 4px;
+  flex-direction: row;
+  gap: 0 4px;
+}
+.finance__report-percentage img {
+  width: 14px;
+  height: 14px;
 }
 .finance__report-percentage span {
-  font-weight: 400;
   font-size: 14px;
+  font-weight: 400;
   color: rgba(13, 22, 58, 0.6);
-  opacity: 0.6;
 }
 .finance__report-amount {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
+  gap: 0 0;
 }
 .finance__report-amount span {
   font-size: 28px;
   font-weight: 600;
+  color: #0D163A;
   letter-spacing: -2px;
+}
+@media (max-width: 1280px) {
+  .finance__report-amount span {
+    font-size: 20px;
+    font-weight: 600;
+    color: #0D163A;
+  }
+}
+@media (max-width: 780px) {
+  .finance__report-amount span {
+    font-size: 18px;
+  }
+}
+.finance__report-amount--balance span {
+  color: #FFFFFF;
 }
 .finance__report-divider {
   width: 100%;
   border-bottom: 1px solid rgba(13, 22, 58, 0.2);
   margin: 21.25px 0;
 }
-.finance__report-balance {
+@media (max-width: 1280px) {
+  .finance__report-divider {
+    margin: 16px 0;
+  }
+}
+.finance__report--balance {
   background-color: #4745A4;
   color: #FFFFFF;
 }
-.finance__report-balance .finance__report-title {
+.finance__report--balance .finance__report-title {
   color: #FFFFFF;
 }
-.finance__report-balance .finance__report-percentage span {
+.finance__report--balance .finance__report-percentage span {
   letter-spacing: 0px;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -270,30 +611,51 @@ ul {
   border-radius: 14px;
   background-color: #FFFFFF;
 }
+@media (max-width: 780px) {
+  .saving {
+    padding: 11px;
+  }
+}
 .saving__header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
 }
 .saving__header h3 {
-  font-weight: 700;
   font-size: 20px;
-  letter-spacing: -1px;
+  font-weight: 700;
   color: #0D163A;
+  letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .saving__header h3 {
+    font-size: 18px;
+  }
 }
 .saving__header a {
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   color: #4745A4;
+  line-height: 24px;
+}
+@media (max-width: 780px) {
+  .saving__header a {
+    line-height: 20px;
+  }
 }
 .saving__divider {
   width: 100%;
-  border-bottom: 1px solid rgba(71, 69, 164, 0.1);
+  border-bottom: 1px solid rgba(13, 22, 58, 0.2);
   margin: 24px 0;
 }
 .saving__list {
   display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
   flex-direction: column;
-  row-gap: 16px;
+  gap: 16px 0;
 }
 .saving__item {
   padding: 8px;
@@ -301,6 +663,9 @@ ul {
 .saving__goal {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
   margin-bottom: 14px;
 }
 .saving__goal-title {
@@ -317,21 +682,37 @@ ul {
 .saving__data {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
   margin-bottom: 12px;
 }
 .saving__data-amount {
-  font-weight: 600;
   font-size: 20px;
+  font-weight: 600;
+  color: #0D163A;
   letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .saving__data-amount {
+    font-size: 18px;
+  }
 }
 .saving__data-amount sub {
   font-size: 12px;
+  font-weight: 600;
   color: rgba(71, 69, 164, 0.5);
 }
 .saving__data-percentage {
-  font-weight: 600;
   font-size: 18px;
+  font-weight: 600;
+  color: inherit;
   letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .saving__data-percentage {
+    font-size: 16px;
+  }
 }
 .saving__data-percentage--bali {
   color: #4745A4;
@@ -348,28 +729,197 @@ ul {
   appearance: none;
 }
 .saving__progressbar::-webkit-progress-bar {
-  background-color: #DEDEDE;
   height: 100%;
+  padding: 0;
   border-radius: 100px;
+  background-color: #DEDEDE;
 }
 .saving__progressbar--bali::-webkit-progress-value {
-  background-color: #4745A4;
   height: 100%;
+  padding: 0;
   border-radius: 100px;
+  background-color: #4745A4;
 }
 .saving__progressbar--gadget::-webkit-progress-value {
-  background-color: #3BBB6E;
   height: 100%;
+  padding: 0;
   border-radius: 100px;
+  background-color: #F9BA33;
 }
 .saving__progressbar--charity::-webkit-progress-value {
-  background-color: #F9BA33;
   height: 100%;
+  padding: 0;
   border-radius: 100px;
+  background-color: #3BBB6E;
+}
+
+.transaction {
+  padding: 16px;
+  border-radius: 14px;
+  background-color: #FFFFFF;
+}
+.transaction__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+.transaction__title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #0D163A;
+  letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .transaction__title {
+    font-size: 18px;
+  }
+}
+.transaction__seeall {
+  font-size: 16px;
+  font-weight: 500;
+  color: #4745A4;
+  line-height: 24px;
+  letter-spacing: 0px;
+}
+.transaction__divider {
+  width: 100%;
+  border-bottom: 1px solid rgba(71, 69, 164, 0.1);
+  margin: 24px 0;
+}
+.transaction__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+.transaction__content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 8px;
+}
+.transaction__icon {
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+@media (max-width: 780px) {
+  .transaction__icon {
+    width: 34px;
+    height: 34px;
+  }
+}
+.transaction__icon img {
+  width: 24px;
+  height: 24px;
+}
+@media (max-width: 780px) {
+  .transaction__icon img {
+    width: 18px;
+    height: 18px;
+  }
+}
+.transaction__category {
+  font-size: 18px;
+  font-weight: 600;
+  color: #0D163A;
+  line-height: 24px;
+  margin-bottom: 4px;
+  letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .transaction__category {
+    font-size: 16px;
+  }
+}
+.transaction__date {
+  font-size: 14px;
+  font-weight: 600;
+  color: rgba(71, 69, 164, 0.5);
+  letter-spacing: -1px;
+}
+@media (max-width: 780px) {
+  .transaction__date {
+    font-size: 12px;
+  }
+}
+.transaction__summary {
+  text-align: center;
+}
+.transaction__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+.transaction__item:not(:last-child) {
+  margin-bottom: 28.75px;
+}
+.transaction__amount {
+  font-size: 18px;
+  font-weight: 600;
+  color: #0D163A;
+  line-height: 24px;
+}
+@media (max-width: 780px) {
+  .transaction__amount {
+    font-size: 16px;
+  }
+}
+.transaction__status {
+  font-size: 12px;
+  font-weight: 600;
+  color: #3BBB6E;
+  letter-spacing: -1px;
+}
+
+#chart {
+  width: 100%;
+  height: 400px;
+  border-radius: 8px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.apexcharts-gridline {
+  stroke: #666 !important;
+  /* Lighter grid lines */
+  stroke-dasharray: 4 !important;
+  /* Dashed grid lines */
+}
+
+.apexcharts-yaxis-label {
+  fill: #999 !important;
+  /* Lighter Y-axis labels */
+}
+
+.apexcharts-xaxis-label {
+  fill: #999 !important;
+  /* Lighter X-axis labels */
+}
+
+.apexcharts-legend-text {
+  fill: #999 !important;
+  /* Lighter legend text */
 }
 
 .dashboard {
   display: flex;
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
