--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -12,21 +12,21 @@
     @include media-query(996px){
       width: auto;
     }
-    @include media-query(500px){
-      position: fixed;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      z-index: 200;
+    // @include media-query(500px){
+    //   position: fixed;
+    //   left: -250px;
+    //   width: 250px;
+    //   height: 100%;
+    //   z-index: 200;
     
       
-      transition: left 0.3s ease;
-      &.open{
+    //   transition: left 0.3s ease;
+    //   &.open{
        
-          left: 0px;
+    //       left: 0px;
   
-      }
-    }
+    //   }
+    // }
    
   }
   .sidebar__logo-container{
@@ -140,51 +140,10 @@
 
 
 
-// /* Default sidebar styles */
-// #sidebar {
-//   position: relative;
-//   width: 250px; /* Default sidebar width */
-//   transition: transform 0.3s ease-in-out;
-// }
-
-// /* On smaller screens, hide the sidebar initially */
-// @media (max-width: 1150px) {
-//   #sidebar {
-//       position: absolute;
-//       left: 0;
-//       top: 0;
-//       height: 100vh;
-//       width: 250px;
-//       background: white;
-//       box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
-//       transform: translateX(-100%); /* Hide sidebar */
-//       z-index: 1000; /* Ensure it's above content */
-//   }
-
-//   /* Show sidebar when active */
-//   #sidebar.open {
-//       transform: translateX(0);
-//   }
-
-//   /* Overlay effect to indicate focus */
-//   .sidebar-overlay {
-//       position: fixed;
-//       top: 0;
-//       left: 0;
-//       width: 100%;
-//       height: 100%;
-//       background: rgba(0, 0, 0, 0.4);
-//       z-index: 999;
-//       display: none;
-//   }
-
-//   .sidebar-overlay.active {
-//       display: block;
-//   }
-// }
 
 
-//testing
+
+//testing end
 
   
   .sidebar__navlink--active {
