--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,19 +89,6 @@ h1, h2, h3 {
     width: auto;
   }
 }
-@media (max-width: 500px) {
-  .dashboard__sidebar {
-    position: fixed;
-    left: -250px;
-    width: 250px;
-    height: 100%;
-    z-index: 200;
-    transition: left 0.3s ease;
-  }
-  .dashboard__sidebar.open {
-    left: 0px;
-  }
-}
 
 .sidebar__logo-container {
   position: relative;
@@ -885,34 +872,69 @@ h1, h2, h3 {
   letter-spacing: -1px;
 }
 
-#chart {
+.chart {
+  padding: 20px;
+  border-radius: 14px;
+  background-color: #FFFFFF;
+}
+.chart__title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #0D163A;
+  letter-spacing: -1px;
+}
+.chart__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 0;
+}
+.chart__labels {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  gap: 0 32px;
+}
+@media (max-width: 996px) {
+  .chart__labels {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    gap: 15px 0;
+  }
+}
+.chart__label {
+  font-size: 14px;
+  font-weight: 500;
+  color: #0D163A;
+}
+.chart__label span {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+.chart__label-color--secondary {
+  background-color: #4745A4;
+}
+.chart__label-color--accent {
+  background-color: #F9BA33;
+}
+.chart__select {
+  border: 1px solid #DEDEDE;
+  border-radius: 8px;
+  padding: 8px;
+  color: #7C7C7C;
+  font-size: 14px;
+}
+
+#chart__display {
   width: 100%;
   height: 400px;
-  border-radius: 8px;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.apexcharts-gridline {
-  stroke: #666 !important;
-  /* Lighter grid lines */
-  stroke-dasharray: 4 !important;
-  /* Dashed grid lines */
-}
-
-.apexcharts-yaxis-label {
-  fill: #999 !important;
-  /* Lighter Y-axis labels */
-}
-
-.apexcharts-xaxis-label {
-  fill: #999 !important;
-  /* Lighter X-axis labels */
-}
-
-.apexcharts-legend-text {
-  fill: #999 !important;
-  /* Lighter legend text */
 }
 
 .dashboard {
